minor text changes

--- a/options.html
+++ b/options.html
@@ -5,13 +5,13 @@
   </head>
   <body style="font: message-box">
     <form style="font-size: 15px;padding-bottom:7.5px;margin-top: 1px;margin-bottom: 2px;margin-inline-start: 6px;margin-inline-end: 5px;">
-      <label style="width:285px;display:inline-block">Container Switching:</label>
+      <label style="width:285px;display:inline-block">Container Switching</label>
       <select id="choice">
-        <option value="auto">Automatic</option>
+        <option value="auto">Intelligent</option>
         <option value="manual">Manual</option>
       </select>
     </form>
-    <description style="font-size:12px;margin-top: 1px;margin-bottom: 2px;margin-inline-start: 6px;margin-inline-end: 5px;">Automatic container switching removes the container automatically on non Google URLs, while manual switching requires the user to click the extension button to remove the container.</description>
+    <description style="font-size:12px;margin-top: 1px;margin-bottom: 2px;margin-inline-start: 6px;margin-inline-end: 5px;">Intelligent container switching removes the container automatically on non Google tabs, while manual switching requires the user to click the extension button to remove the container.</description>
     <script src="options.js"></script>
   </body>
 </html>
