context menu searching

--- a/options/options.html
+++ b/options/options.html
@@ -6,7 +6,7 @@
   <body style="font: message-box">
     <form style="font-size: 15px;padding-bottom:7.5px;margin-top: 1px;margin-bottom: 2px;margin-inline-start: 6px;margin-inline-end: 5px;">
       <label style="width:285px;display:inline-block">Container Switching</label>
-      <select id="choice">
+      <select class="browser-style" id="choice">
         <option value="auto">Intelligent</option>
         <option value="manual">Manual</option>
       </select>
